--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,9 +8,10 @@ phases:
   build:
     commands:
       - echo Packaging templates...
-      - aws s3 cp lambdafunc.yaml s3://iac-bucket-azamcloud/
-      - aws s3 cp s3-event.yaml s3://iac-bucket-azamcloud/
-      - aws cloudformation deploy --template-file master-event.yaml --stack-name ecs-infra-stack --capabilities CAPABILITY_NAMED_IAM --parameter-overrides file://prod-params.json
+      - aws s3 cp WebBucket.yaml s3://iac-bucket-azamcloud/
+      - aws s3 cp Route53.yaml s3://iac-bucket-azamcloud/
+      - aws s3 cp cloudfront.yaml s3://iac-bucket-azamcloud/
+      - aws cloudformation deploy --template-file master-stack.yaml --stack-name ecs-infra-stack --capabilities CAPABILITY_NAMED_IAM --parameter-overrides file://prod-params.json
 
 artifacts:
   files:
