--- a/Route53.yaml
+++ b/Route53.yaml
@@ -17,8 +17,9 @@ Resources:
       Type: A
       AliasTarget:
         DNSName: !Ref CloudFrontDomainName
-        HostedZoneId: !Ref Z2FDTNDATAQYW2
+        HostedZoneId: Z2FDTNDATAQYW2
 
 Outputs:
   DNSRecordName:
     Value: !Ref DomainName
+
